--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_DOMAIN_DEV=localhost
-VUE_APP_NAME=FastAPI Vuetify Template
+VUE_APP_DOMAIN_DEV=localhost:8000
+VUE_APP_NAME='Vue Vuetify Template'
 VUE_APP_ENV=development
